# pg-man

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/db_man/: __main__.py  app.py
src/db_man/lib/: db.py  front_matter.py  sort.py  uid.py
src/db_man/lib/pg/: __init__.py  subproc.py
src/db_man/lib/schema/: __init__.py  autogenerate.py  ddl.py  revisions.py
src/pg_man/: __main__.py  app.py  config.py
src/pg_man/lib/schema/: autogenerate.py  ddl.py  revisions.py
