[project]
name = "pg-man"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.1.2",
    "parse>=1.20.2",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
pgman = "pg_man.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"